添加统计模块

--- a/src/pages/statistics/sold-statistics/sold-statistics.html
+++ b/src/pages/statistics/sold-statistics/sold-statistics.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the MorePage page.
+  Generated template for the SoldStatisticsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,14 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>more</ion-title>
+    <ion-title>销售统计</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <ion-list class="more-list" (click)="go2Stats()">
-    <ion-icon name="stats"></ion-icon>统计
-  </ion-list>
+
 </ion-content>
