完善销售统计及添加excel导出service

--- a/src/pages/customer/customer.html
+++ b/src/pages/customer/customer.html
@@ -15,10 +15,10 @@
 
 <ion-content padding class="customer">
     <div class="btn-tab" (click)="add()">
-        <ion-icon name="add-circle"></ion-icon>
+        <ion-icon name="add-circle">添加</ion-icon>
     </div>
 
     <div class="btn-tab" (click)="search()">
-        <ion-icon name="search"></ion-icon>
+        <ion-icon name="search">搜索</ion-icon>
     </div>
 </ion-content>
