--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -19,15 +19,15 @@
     </div>
     <ion-list class="input-box">
       <ion-item>
-        <ion-input type="text" placeholder="用户名" [(ngModel)]="username"></ion-input>
+        <ion-input type="text" placeholder="用户名" [(ngModel)]="createUser.username"></ion-input>
       </ion-item>
   
       <ion-item>
-        <ion-input type="password" placeholder="密码" [(ngModel)]="password"></ion-input>
+        <ion-input type="password" placeholder="密码" [(ngModel)]="createUser.password"></ion-input>
       </ion-item>
 
       <ion-item>
-          <ion-input type="password" placeholder="再次输入密码" [(ngModel)]="password2"></ion-input>
+          <ion-input type="password" placeholder="再次输入密码" [(ngModel)]="createUser.password2"></ion-input>
         </ion-item>
     </ion-list>
   
