--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -13,8 +13,9 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="more">
   <ion-list class="more-list" (click)="go2Stats()">
     <ion-icon name="stats"></ion-icon>统计
   </ion-list>
+  <button ion-button full round class="logout-btn" (click)="logout()">退出登录</button>
 </ion-content>
