--- a/src/pages/statistics/statistics.html
+++ b/src/pages/statistics/statistics.html
@@ -14,7 +14,9 @@
 
 
 <ion-content padding>
-  <ion-list class="statistics-list" (click)="go2SoldStats()">
-    <ion-icon name="stats"></ion-icon>销售统计
+  <ion-list class="statistics-list">
+      <button ion-item (click)="go2SoldStats()">
+          <ion-icon name="stats"></ion-icon>销售统计
+      </button>
   </ion-list>
 </ion-content>
