--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -22,6 +22,11 @@
     <button ion-item (click)="go2Export()">
         <ion-icon name="md-open"></ion-icon>导出excel
     </button>
+
+    <button ion-item (click)="go2BindCode()">
+      <ion-icon name="barcode"></ion-icon>我的查询码
+    </button>
+
   </ion-list>
   <button ion-button full round class="logout-btn" (click)="logout()">退出登录</button>
 </ion-content>
