--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,4 +29,5 @@
 
   <button ion-button full round (click)="login()">登录</button>
   <button ion-button full round (click)="register()">去注册</button>
+  <button ion-button full round (click)="search()">我只想查询单号</button>
 </ion-content>
