新增退出按钮

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,5 +14,6 @@
 
 
 <ion-content padding>
-
+  <p>如出现问题点击此按钮并重新登录</p>
+  <button ion-button full round (click)="reset()">退出并重置</button>
 </ion-content>
