--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -27,6 +27,10 @@
       <ion-icon name="barcode"></ion-icon>我的查询码
     </button>
 
+    <button ion-item (click)="go2Stock()">
+      <ion-icon name="logo-buffer"></ion-icon>库存管理
+    </button>
+
   </ion-list>
   <button ion-button full round class="logout-btn" (click)="logout()">退出登录</button>
 </ion-content>
