库存导出功能

--- a/src/pages/export/export.html
+++ b/src/pages/export/export.html
@@ -18,5 +18,9 @@
         <button ion-item (click)="go2SoldRecExport()">
             <ion-icon name="md-open"></ion-icon>销售记录导出
         </button>
+
+        <button ion-item (click)="go2StockExport()">
+            <ion-icon name="md-open"></ion-icon>库存记录导出
+        </button>
     </ion-list>
 </ion-content>
