供应商功能

--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -31,6 +31,10 @@
       <ion-icon name="logo-buffer"></ion-icon>库存管理
     </button>
 
+    <button ion-item (click)="go2Supplier()">
+      <ion-icon name="people"></ion-icon>供应商管理
+    </button>
+
   </ion-list>
   <button ion-button full round class="logout-btn" (click)="logout()">退出登录</button>
 </ion-content>
